Fixed bug #39873 (number_format() breaks with locale & decimal points).